proof of concept

--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@ germanforblack.com
     </div>
 
     <div id="image-holder">
-      <img class="left-image">
-      <img class="image">
-      <img class="right-image">
+      <video class="image">
+        <source type="application/x-mpegURL" src="gifcity.m3u8">
+      </video>
     </div>
   </body>
 
@@ -83,5 +83,5 @@ germanforblack.com
   </script>
   <script src="src/vendor/async.min.js"></script>
   <script src="src/vendor/keymaster.min.js"></script>
-  <script src="src/tumblr.js" defer></script>
+  <!--<script src="src/tumblr.js" defer></script>-->
 </html>
